<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="short_app_name">MithrilAC</string>
    <string name="mithril_app_icon_description">This is Mithril\'s icon</string>
    <string name="violationsMenu">Violations</string>
    <string name="policyMenu">Policies</string>
    <string name="feedback">Feedback</string>
    <string name="give_feedback">Answer feedback questions</string>
    <string name="usage_stats">App usage stats</string>
    <string name="usage_list">App usage list</string>
    <string name="permissions">Permissions</string>
    <string name="permissions_list">Permissions list</string>
    <string name="components">Apps</string>
    <string name="userApps">User apps</string>
    <string name="systemApps">System apps</string>
    <string name="allApps">All apps</string>
    <string name="services">Services</string>
    <string name="bcastreceivers">Broadcast receivers</string>
    <string name="contentproviders">Content providers</string>
    <string name="app_icon_description">This is an app\'s icon</string>
    <string name="app_name_placeholder_text">Some app</string>
    <string name="app_version_placeholder_text">App\'s version</string>
    <string name="all_app_info_placeholder_text">Total number of apps installed is: </string>
    <string name="app_name">Mithril Access Control</string>
    <string name="app_name_with_index">MithrilAC (%1$d/%2$d)</string>
    <string name="mithril_service_name">Mithril App Launch Detector Service</string>
    <string name="loading">Loading Mithril\'s\nKnowledge-Base</string>
    <string name="downloading_policies">Downloading policies</string>
    <string name="setting_geofences">Setting up Geofences</string>
    <string name="explanation">Tap device with NFC tag</string>
    <string name="no_description_available_txt">No description available!</string>
    <string name="no_data">No permission information is available for this app or this app doesn\'t use any permissions!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_website">https://mithril.online</string>
    <string name="done_with_instances_settings">Done</string>
    <string name="capture_exec_settings">Mithril mode change</string>
    <string name="info">About the app</string>
    <string name="exit_this_survey">Exit this survey</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="dialog_exit_app">Do you want to uninstall this app?</string>
    <string name="more_options">Extra</string>
    <string name="functionality_not_active_yet">Functionality not active yet&#8230;</string>
    <string name="place_holder_for_data_to_be_displayed">Some placeholder for data to be displayed</string>
    <string name="button_true_violation">Blocked</string>
    <string name="button_false_violation">Allowed</string>
    <string name="partial_button_false_violation">Customize</string>
    <string name="action_delete_rule">Delete Rule</string>
    <string name="action_rule_ok">Rule is @android:string/OK</string>
    <string name="action_reload_database">Reload Database</string>
    <string name="action_advanced_settings">Advanced settings</string>
    <string name="action_reload_data">Reload Data</string>
    <string name="dialog_reload_data">Do you really want to reset the app?</string>
    <string name="dialog_resp_delete">Yes</string>
    <string name="dialog_resp_NO">No</string>
    <string name="please_install">Please install below apps for our user-study</string>
    <string name="mithrilac_requires">Mithril requires access to</string>
    <string name="allow_generic_permissions">Location, Storage and Calendar</string>
    <string name="allow_special_usage_stats_permission">App usage stats</string>
    <string name="allow_settings_permission">System settings</string>
    <string name="draw_over_apps_permission">Permission for drawing over other apps</string>
    <string name="allow_root_access">AppOps through root</string>
    <string name="allow_access_fine_location_permission">ACCESS_FINE_LOCATION permission is mandatory for app functionality</string>
    <string name="allow_write_external_storage_permission">WRITE_EXTERNAL_STORAGE permission is mandatory for app functionality</string>
    <string name="allow_read_external_storage_permission">READ_EXTERNAL_STORAGE permission is mandatory for app functionality</string>
    <string name="allow_read_calendar_permission">READ_CALENDAR permission is mandatory for app functionality</string>
    <string name="allow_write_calendar_permission">WRITE_CALENDAR permission is mandatory for app functionality</string>
    <string name="allow_usage_stats_permission">PACKAGE_USAGE_STATS permission required, please enable in settings</string>
    <string name="dialog_resp_allow">@android:string/ok</string>
    <string name="dialog_resp_deny">@android:string/cancel</string>
    <string name="policy_tbl_policy_rule_info">Policy Rule Info</string>
    <string name="policy_tbl_lbl_policy_name">Policy Name: </string>
    <string name="policy_tbl_lbl_rule_name">Rule Name: </string>
    <string name="policy_tbl_lbl_requester_info">Requester Info</string>
    <string name="policy_tbl_lbl_app_name">App Name: </string>
    <string name="policy_tbl_lbl_app_content_maturity">Content Maturity: </string>
    <string name="policy_tbl_lbl_app_developer">App Developer: </string>
    <string name="policy_tbl_lbl_app_origin_country">App Origin Country: </string>
    <string name="policy_tbl_lbl_app_rating">App Rating: </string>
    <string name="policy_tbl_lbl_app_install_count">App Install Count: </string>
    <string name="policy_tbl_lbl_violation_info">Violation Info</string>
    <string name="policy_tbl_lbl_requester">Requester: </string>
    <string name="policy_tbl_lbl_rule_description">Description: </string>
    <string name="policy_tbl_data_policy_name">Graduate Student Policy</string>
    <string name="policy_tbl_data_rule_name">SocialMediaCameraAccessRule</string>
    <string name="policy_tbl_data_app_name">Instagram</string>
    <string name="policy_tbl_app_content_maturity">Everyone</string>
    <string name="policy_tbl_data_app_developer">Instagram</string>
    <string name="policy_tbl_data_app_origin_country">United States</string>
    <string name="policy_tbl_data_app_rating">4.5</string>
    <string name="policy_tbl_data_app_install_count">1 &#8211; 5 million</string>
    <string name="policy_tbl_data_requester">Camera</string>
    <string name="policy_tbl_data_rule_description">At school</string>
    <string name="pol_rule_change_header_txt">Current rule details</string>
    <string name="pol_rule_del_btn_label">Delete Rule</string>
    <string name="pol_rule_change_save_btn_label">Save rule changes</string>
    <string name="toggle_label">Choose to allow or block</string>
    <string name="pol_rule_ok_btn_label">Rule @android:string/OK</string>
    <string name="pol_rule_create_new_btn_label">Create New Rule</string>
    <string name="pol_rule_changing_done_btn_label">Done with changes</string>
    <string name="pol_rule_changing_add_more_consequents_label">Add more consequents</string>
    <string name="click_save_button_to_enable_context">Click save button to enable all context</string>
    <string name="pol_rule_cond_heading_text">Choose the desired policy rule conditions</string>
    <string name="pol_rule_cond_time_context_text">Time</string>
    <string name="pol_rule_cond_location_context_text">Location</string>
    <string name="pol_rule_cond_activity_context_text">Activity</string>
    <string name="pol_rule_cond_presence_info_context_text">Presence</string>
    <string name="placeholder_text_violation_info">App name</string>
    <string name="placeholder_text_violation_when">Action used when</string>
    <string name="placeholder_text_violation_where">Context was</string>
    <string name="uploading_as">Uploading as&#160;</string>
    <string name="anonymous">anonymous</string>
    <string name="pref_all_done_key">prefsDone</string>
    <string name="pref_all_done_summary">Done with context information setup</string>
    <string name="pref_all_done_title">Context setup complete</string>
    <string name="pref_header_location_context">Manage location prefs</string>
    <string name="pref_location_context_switch_key">enableLocationContext</string>
    <string name="pref_location_context_switch_title">Enable location prefs</string>
    <string name="pref_location_context_switch_summary">Click to enable following location prefs</string>
    <string name="pref_home_location_key">homeLocation</string>
    <string name="pref_home_location_summary">Home</string>
    <string name="pref_home_location_title">Save home location</string>
    <string name="pref_work_location_key">workLocation</string>
    <string name="pref_work_location_summary">Work</string>
    <string name="pref_work_location_title">Save work location</string>
    <string name="pref_other_location_key">otherLocation</string>
    <string name="pref_other_location_summary">More</string>
    <string name="pref_other_location_title">Save more location</string>
    <string name="pref_choose_days">Choose the days</string>
    <string name="pref_header_temporal_context">Manage detectedAtTime prefs</string>
    <string name="pref_temporal_context_all_day_event">All day event</string>
    <string name="pref_temporal_context_switch_key">enableTemporalContext</string>
    <string name="pref_temporal_context_switch_title">Adding temporal context for</string>
    <string name="pref_temporal_context_switch_summary">Click to enable following detectedAtTime prefs</string>
    <string name="pref_temporal_context_choose_repeat_frequency">Repeat frequency</string>
    <string name="days_of_week">Days of week:&#160;</string>
    <string name="choose">Choose</string>
    <string name="starting_time">Start time:&#160;</string>
    <string name="ending_time">End time:&#160;</string>
    <string name="enabled_time">Context enabled</string>
    <string name="what_time_is_this">Choose label</string>
    <string name="timepicker_dialog_start_time">Choose start time</string>
    <string name="timepicker_dialog_end_time">Choose end time</string>
    <string name="pref_work_hours_context_summary">Work</string>
    <string name="pref_work_hours_start_title">Change start of work-hours</string>
    <string name="pref_monday">Monday</string>
    <string name="pref_tuesday">Tuesday</string>
    <string name="pref_wednesday">Wednesday</string>
    <string name="pref_thursday">Thursday</string>
    <string name="pref_friday">Friday</string>
    <string name="pref_saturday">Saturday</string>
    <string name="pref_sunday">Sunday</string>
    <string name="title_activity_prefs">Edit context</string>
    <string name="title_bottom_navigation_location">Location</string>
    <string name="title_bottom_navigation_temporal">Temporal</string>
    <string name="title_bottom_navigation_presence_related">Presence</string>
    <string name="title_bottom_navigation_activity">Activity</string>
    <string name="reset_app">Reset app</string>
    <string name="app_name_label">App</string>
    <string name="fullscreen_user_agreement_consent_text">Welcome!\nPlease click \"Continue\" to read the user agreement &amp; study details&#8230;</string>
    <string name="continue_user_agreement_btn_label">Continue</string>
    <string name="strongly_agree">Strongly agree</string>
    <string name="agree">Agree</string>
    <string name="neutral">Neutral</string>
    <string name="disagree">Disagree</string>
    <string name="strongly_disagree">Strongly disagree</string>
    <string name="see_older_feedback_btn">Past uploads</string>
    <string name="last_time_used_label">Last detectedAtTime used</string>
    <string name="usage_time_label">Usage detectedAtTime</string>
    <string name="display_order_text">Sort by:</string>
</resources>