<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_violations"
            android:icon="@drawable/alert"
            android:title="@string/violationsMenu" />
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/account_settings"
            android:title="@string/policyMenu" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/file_chart"
            android:title="@string/feedback" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/apps"
            android:title="@string/components" />
        <item
            android:id="@+id/nav_perm"
            android:icon="@drawable/security"
            android:title="@string/permissions" />
        <!--<item-->
            <!--android:id="@+id/nav_usage"-->
            <!--android:icon="@drawable/poll"-->
            <!--android:title="@string/usage_stats" />-->
    </group>
    <item android:title="@string/more_options">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:checkable="true"
                android:icon="@drawable/exit_to_app"
                android:title="@string/exit_this_survey" />
            <item
                android:id="@+id/nav_about"
                android:checkable="true"
                android:icon="@drawable/ic_info"
                android:title="@string/info" />
            <item
                android:id="@+id/nav_settings"
                android:checkable="true"
                android:icon="@drawable/settings"
                android:title="@string/title_activity_prefs" />
            <item
                android:id="@+id/nav_reset_app"
                android:checkable="true"
                android:icon="@drawable/reload"
                android:title="@string/reset_app" />
        </menu>
    </item>
</menu>