<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/radio_strongly_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strongly_agree" />

    <RadioButton
        android:id="@+id/radio_agree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agree" />

    <RadioButton
        android:id="@+id/radio_neutral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neutral" />

    <RadioButton
        android:id="@+id/radio_disagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disagree" />

    <RadioButton
        android:id="@+id/radio_strongly_disagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strongly_disagree" />
</RadioGroup>