<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/map_marker"
        android:title="@string/title_bottom_navigation_location" />

    <item
        android:id="@+id/navigation_temporal"
        android:icon="@drawable/timetable"
        android:title="@string/title_bottom_navigation_temporal" />

    <item
        android:id="@+id/navigation_presence_related"
        android:icon="@drawable/google_nearby"
        android:title="@string/title_bottom_navigation_presence_related" />

    <item
        android:id="@+id/navigation_activity"
        android:icon="@drawable/run"
        android:title="@string/title_bottom_navigation_activity" />

</menu>