<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_violations"
            android:icon="@drawable/rules"
            android:title="@string/violationsMenu" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/account"
            android:title="@string/userApps" />
        <item
            android:id="@+id/nav_system"
            android:icon="@drawable/settings"
            android:title="@string/systemApps" />
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/content_save_all"
            android:title="@string/allApps" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
