<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/FullscreenTheme"
    tools:context=".ui.activities.LauncherActivity">

    <Button
        android:id="@+id/continueToUserAgreementBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorButton"
        android:text="@string/continue_user_agreement_btn_label"
        android:theme="@style/AppTheme.Button" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/continueToUserAgreementBtn"
        android:background="@color/colorDivider" />

    <TextView
        android:id="@+id/fullscreen_user_agreement_please_read_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/continueToUserAgreementBtn"
        android:paddingBottom="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:paddingTop="@dimen/fab_margin"
        android:text="@string/fullscreen_user_agreement_consent_text"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Holo.Medium"
        android:textColor="@color/colorPrimaryText"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/project_name_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/fullscreen_user_agreement_please_read_TextView"
        android:layout_centerInParent="true"
        android:fontFamily="sans-serif-smallcaps"
        android:paddingBottom="@dimen/fab_margin"
        android:paddingLeft="@dimen/fab_margin"
        android:paddingRight="@dimen/fab_margin"
        android:paddingTop="@dimen/fab_margin"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:elevation="200dp"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:paddingBottom="@dimen/fab_margin"
        android:src="@drawable/logo" />
</RelativeLayout>