<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_violation_detail_policy_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_view_margin"
        android:layout_marginEnd="@dimen/card_view_margin"
        android:layout_marginStart="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        android:elevation="@dimen/card_view_margin"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewPolicyDetailHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:fontFamily="josephine-sans"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/policy_tbl_policy_rule_info"
                android:textColor="@color/colorPrimaryText"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textViewViolationDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewPolicyDetailHeader"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/policy_tbl_data_policy_name"
                android:textColor="@color/colorSecondaryText"
                android:textSize="20dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view_violation_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_violation_detail_policy_info"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/card_view_margin"
        android:layout_marginEnd="@dimen/card_view_margin"
        android:layout_marginStart="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        android:elevation="@dimen/card_view_margin"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewViolationDetailHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/policy_tbl_lbl_violation_info"
                android:textColor="@color/colorPrimaryText"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/textViewPolicyDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewViolationDetailHeader"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                android:text="@string/placeholder_text_violation_info"
                android:textColor="@color/colorSecondaryText"
                android:textSize="20dp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="124dp"
        android:text="@string/pol_rule_change_save_btn_label"
        android:theme="@style/AppTheme.Button" />
</RelativeLayout>